--- a/netlify.toml
+++ b/netlify.toml
@@ -21,6 +21,7 @@ SITE_TITLE_TAB = ""
 # (REQUIRED) Netlify site URL
 SITE_URL = "modusponens.netlify.app"
 # (Optional) Site Timezone
+TIMEZONE = "Asia/Hong_Kong"
 ZOLA_VERSION = "0.15.2"
 # (Optional, default title) How to sort notes inside each section on the right sidebar ("date" or "title"). Subsections on side bar are sorted by title, the sort order cannot be changed.
 SORT_BY = "title"
