--- a/netlify.toml
+++ b/netlify.toml
@@ -10,7 +10,7 @@ LANDING_DESCRIPTION = "I have nothing but intelligence."
 # (REQUIRED) The Markdown page linked to landing page button (e.g. put home for ./home.md)
 LANDING_PAGE = "home"
 # (Optional) Site title on landing page
-LANDING_TITLE = "A Unimelb Grad Student's Math/Statistics Notes"
+LANDING_TITLE = "A Unimelb Grad Student's Maths and (mostly Statistics) Notes"
 PYTHON_VERSION = "3.8"
 # (REQUIRED) Site repo URL
 REPO_URL = "https://github.com/owowouwu/msc-math-wiki"
@@ -19,7 +19,7 @@ SITE_TITLE = "Someone's Second 🧠"
 # (Optional) Site title in browser tab (leave blank to use SITE_TITLE)
 SITE_TITLE_TAB = ""
 # (REQUIRED) Netlify site URL
-SITE_URL = "modusponens.netlify.app"
+SITE_URL = "https://modusponens.netlify.app"
 # (Optional) Site Timezone
 TIMEZONE = "Asia/Hong_Kong"
 ZOLA_VERSION = "0.15.2"
