--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "home.md",
+            "file": "_Metric and Hilbert Spaces.md",
             "mode": "source",
             "source": false
           }
@@ -49,13 +49,11 @@
               }
             }
           }
-        ],
-        "currentTab": 1
+        ]
       }
     ],
     "direction": "horizontal",
-    "width": 258.00000190734863,
-    "collapsed": true
+    "width": 258.00000190734863
   },
   "right": {
     "id": "b469458c700e4e79",
@@ -71,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "home.md",
+                "file": "_Metric and Hilbert Spaces.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -91,15 +89,15 @@
   },
   "active": "3e41c5446b0e446e",
   "lastOpenFiles": [
-    "_Advanced Probability MOOC.md",
-    "home.md",
+    "_Index.md",
+    "_Machine Learning.md",
+    "_Nonparametric Bayesian.md",
+    "Notes/Untitled.md",
+    "_Metric and Hilbert Spaces.md",
+    "_Advanced Probability.md",
     "Notes/AdvProb17.md",
     "Notes/Random Variables as a Hilbert Space.md",
     "Notes/Lebesgue Measurable Spaces.md",
-    "Notes/Conditional Expectation.md",
-    "Notes/m-adic Topology.md",
-    "Notes/AdvProbLecturesIndex.md",
-    "_Metric and Hilbert Spaces MOOC.md",
-    "Notes/Abelian Group.md"
+    "Notes/Conditional Expectation.md"
   ]
 }
