--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "_Metric and Hilbert Spaces.md",
+            "file": "_Index.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_Metric and Hilbert Spaces.md",
+                "file": "_Index.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,11 +89,11 @@
   },
   "active": "3e41c5446b0e446e",
   "lastOpenFiles": [
+    "_Metric and Hilbert Spaces.md",
     "_Index.md",
     "_Machine Learning.md",
     "_Nonparametric Bayesian.md",
     "Notes/Untitled.md",
-    "_Metric and Hilbert Spaces.md",
     "_Advanced Probability.md",
     "Notes/AdvProb17.md",
     "Notes/Random Variables as a Hilbert Space.md",
