--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,12 +7,8 @@
         "id": "3e41c5446b0e446e",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "_Index.md",
-            "mode": "source",
-            "source": false
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -69,7 +65,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_Index.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,8 +84,8 @@
   },
   "active": "3e41c5446b0e446e",
   "lastOpenFiles": [
-    "_Metric and Hilbert Spaces.md",
     "_Index.md",
+    "_Metric and Hilbert Spaces.md",
     "_Machine Learning.md",
     "_Nonparametric Bayesian.md",
     "Notes/Untitled.md",
