--- a/netlify.toml
+++ b/netlify.toml
@@ -38,7 +38,7 @@ FOOTER = ""
 # (Optional, default main) Root section name.
 ROOT_SECTION_NAME = "main"
 # to fix math?
-STRICT_LINE_BREAKS=y
+STRICT_LINE_BREAKS="y"
 # (Optional) visjs graph options. Can remove if desired.
 GRAPH_OPTIONS = """
         {
