--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "__Index.md",
+            "file": "__Home.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "__Index.md",
+                "file": "__Home.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -90,7 +90,7 @@
   "active": "3e41c5446b0e446e",
   "lastOpenFiles": [
     "README.md",
-    "__Index.md",
+    "__Home.md",
     "_Index.md",
     "_Metric and Hilbert Spaces.md",
     "_Machine Learning.md",
