--- a/netlify.toml
+++ b/netlify.toml
@@ -8,7 +8,7 @@ LANDING_BUTTON = "Click to view my notes 🙈"
 # (Optional) Site description on landing page
 LANDING_DESCRIPTION = "Hopefully this grows into something nice and presentable 🐒."
 # (REQUIRED) The Markdown page linked to landing page button (e.g. put home for ./home.md)
-LANDING_PAGE = "__Index"
+LANDING_PAGE = "__HOME"
 # (Optional) Site title on landing page
 LANDING_TITLE = "A Unimelb Grad Student's Maths and (mostly Statistics) Notes"
 PYTHON_VERSION = "3.8"
